# rusp

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  clippy.yml  rustfmt.yml
rhai-rusp/: Cargo.toml  README.md
rhai-rusp-bin/: Cargo.toml
rhai-rusp-lib/: Cargo.toml
rhai-rusp/examples/: create_get_msg_and_record.rhai  create_get_msg_and_record_chained.rhai  load_and_print_msg.rhai  load_and_print_record.rhai
rhai-rusp/src/: lib.rs
rusp-bin/: Cargo.toml  README.md
rusp-lib/: Cargo.toml  README.md
rusp-lib/src/: lib.rs  usp-msg-1-2.proto  usp-record-1-3.proto  usp-record-1-4.proto  usp_builder.rs  usp_decoder.rs  usp_encoder.rs  usp_errors.rs  usp_json.rs  usp_record.rs  usp_types.rs
rusp-lib/src/usp_builder/: delete.rs  deregister.rs  error.rs  get.rs  getinstances.rs  getsupporteddm.rs  getsupportedprotocol.rs  msg.rs  notify.rs  operate.rs  record.rs  register.rs  set.rs
rusp-lib/tests/: parsing_test.rs  test_json.rs
src/: lib.rs  main.rs  usp-msg-1-1.proto  usp-msg-1-3.proto  usp-msg-1-4.proto  usp-msg.proto  usp-record-1-1.proto  usp-record-1-2.proto  usp-record.proto  usp.rs  usp_builder.rs  usp_decoder.rs  usp_encoder.rs  usp_errors.rs  usp_formatter.rs  usp_generator.rs  usp_json.rs  usp_record.rs  usp_types.rs
src/usp_builder/: add.rs  delete.rs  deregister.rs  error.rs  get.rs  getinstances.rs  getsupporteddm.rs  getsupportedprotocol.rs  msg.rs  notify.rs  operate.rs  record.rs  register.rs  set.rs
tests/: parsing_test.rs  test_json.rs
