[workspace]
resolver = "2"
members = [
    "rusp-lib",
    "rusp-bin",
    "rhai-rusp",
]

[workspace.dependencies]
rhai = { version = "1.16", features = ["serde"] }
rusp-lib = { version = "0.96", path = "rusp-lib" }
rhai-rusp = { version = "0.96", path = "rhai-rusp" }

anyhow = "1.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
quick-protobuf = "0.8"
