[package]
authors = ["Daniel Egger <daniel.egger@axiros.com>", "Axiros GmbH"]
description = "Rhai bindings for the Rust USP toolkit"
name = "rhai-rusp"
version = "0.96.2"
edition = "2021"
license = "BSD-3-Clause"
readme = "README.md"
repository = "https://github.com/axiros/rusp"

[dependencies]
rhai = { workspace = true }
rusp-lib = { workspace = true }
anyhow = { workspace = true }
quick-protobuf = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
serde_json = { workspace = true }
