[package]
authors = ["Daniel Egger <daniel.egger@axiros.com>", "Axiros GmbH"]
description = "Rhai bindings for the Rust USP toolkit"
name = "rhai-rusp"
edition = "2021"
license = "BSD-3-Clause"
readme = "README.md"
repository = "https://github.com/axiros/rusp"
version = "1.0.1"

[dependencies]
rhai = { workspace = true }
rusp-lib = { workspace = true }
serde_json = { workspace = true }
