[package]
authors = ["Daniel Egger <daniel.egger@axiros.com>", "Axiros GmbH"]
description = "The Rust USP toolkit"
edition = "2021"
license = "BSD-3-Clause"
name = "rusp"
readme = "README.md"
repository = "https://github.com/axiros/rusp"
version = "0.95.0"

[badges]
[badges.travis-ci]
repository = "axiros/rusp"

[dependencies]
rhai = { workspace = true }
anyhow = { workspace = true }
clap = { version = "4", default-features = false, features = ["std", "derive"] }
quick-protobuf = { workspace = true }
rusp-lib = { version = "0.95", path = "../rusp-lib" }
rhai-rusp = { version = "0.95", path = "../rhai-rusp" }
serde = { workspace = true }
serde_derive = { workspace = true }
serde_json = { workspace = true }

[[bin]]
name = "rusp"

[[bin]]
name = "rusp-run"
