[package]
authors = ["Daniel Egger <daniel.egger@axiros.com>", "Axiros GmbH"]
description = "The Rust USP toolkit"
edition = "2021"
license = "BSD-3-Clause"
name = "rusp"
readme = "README.md"
repository = "https://github.com/axiros/rusp"
version = "1.0.0"

[badges]
[badges.travis-ci]
repository = "axiros/rusp"

[dependencies]
rhai = { workspace = true }
anyhow = { workspace = true }
clap = { version = "4", features = ["derive"] }
rusp-lib = { workspace = true }
rhai-rusp = { workspace = true }
serde_json = { workspace = true }
rhai-rand = "0.1.6"
argh = { version = "0.1", default-features = false, features = ["help"] }

[[bin]]
name = "rusp"

[[bin]]
name = "rusp-run"
