[package]
authors = ["Daniel Egger <daniel.egger@axiros.com>", "Axiros GmbH"]
description = "The Rust USP toolkit"
edition = "2021"
license = "BSD-3-Clause"
name = "rusp-lib"
readme = "README.md"
repository = "https://github.com/axiros/rusp"
version = "0.97.0"

[badges]
[badges.travis-ci]
repository = "axiros/rusp"

[dependencies]
anyhow = { workspace = true }
quick-protobuf = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
serde_json = { workspace = true }
